# Matdao-AI-Scientific-Paper-Valuation

./: .env.example  .gitignore  55b810ef-33db-4e44-bb0e-a6881a5e38fc  AGENTS.md  Dockerfile  LICENSE  PRD.md  README.md  SKILLS.md  docker-compose.yml  render.yaml
.agents/memory/: context.md  usage.json
.archive/: README.md
.devcontainer/: devcontainer.json
backend/: main.py  pyproject.toml  requirements.txt
backend/api/adapters/: base_adapter.py  clinical_trials_adapter.py  crossref_adapter.py  falcon_ocr_adapter.py  glm_ocr_adapter.py  grobid_adapter.py  lighton_ocr_adapter.py  nih_reporter_adapter.py  openalex_adapter.py  osf_adapter.py  semantic_scholar_adapter.py  serpapi_scholar_adapter.py
backend/api/routes/: papers.py  scoring.py  upload.py
backend/core/: config.py  exceptions.py  json_utils.py
backend/db/: models.py  session.py
backend/models/: api_responses.py  paper.py  scoring.py  types.py
backend/services/: evaluation.py  research_enrichment.py
backend/services/scoring/: dimension2.py  dimension9.py  engine.py
backend/tests/: conftest.py  test_crossref_adapter.py  test_dimension2.py  test_dimension9_gate.py  test_evaluation_quality.py  test_glm_ocr_adapter.py  test_lighton_ocr_adapter.py  test_low_confidence_queue.py  test_rate_limiter.py  test_research_enrichment.py  test_scoring_engine.py  test_scoring_response_helpers.py  test_upload_dedupe.py  test_upload_ocr_fallback.py  test_upload_validation.py
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
(+70 files in other folders)
