[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matdao-backend"
version = "0.1.0"
description = "MatDAO Automation Framework — Scientific Due Diligence Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
